--- a/style.css
+++ b/style.css
@@ -1,9 +1,19 @@
+body{
+    margin: 0;
+    padding: 0;
+   
+}
+
+
 .kanban{
     display:flex ;
     padding: 30px;
     width: 750px;
-    background-color: rgb(57, 139, 115);
+background: rgb(238,174,202);
+background: linear-gradient(90deg, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
     border-radius: 5px;
+    margin: 0 auto;
+    margin-top:100px;
 }
 .kanban *{
     font-family: "poppins";
@@ -23,9 +33,10 @@
 .kanban__item-input{
     padding: 10px 15px;
     box-sizing: border-box;
-    background-color: #fff;
+    background-color: #ffffffbe;
     border-radius: 5px;
     cursor: pointer;
+    color: rgb(58, 50, 50);
 }
 .kanban__add-item{
     width:100%;
@@ -46,4 +57,16 @@
 .kanban__dropzone--active {
     height: 20px;
     background: rgba(0, 0, 0, 0.25);
+}
+@media only screen and (max-width: 800px) {
+  .kanban{
+    flex-direction: column;
+    width:auto;
+    align-items: center;
+    justify-content: center;
+    margin-top: 0;
+  }
+  .kanban__item-input{
+    width: 300px;
+  }
 }
